[tool.poetry]
name = "streamlit-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^1.3.2"
streamlit = "^0.88.0"
plotly = "^5.3.1"
rsconnect-python = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
